--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#35465C"
+    android:background="@color/colorPrimary"
     tools:context=".activitysnormal.CadastroUsuarioActivity">
 
     <include
