--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
@@ -12,13 +12,14 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/icon_pessoa"
+        app:srcCompat="@drawable/ic_person"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="0dp"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv_user_nome"
+        android:textAlignment="center"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_below="@+id/iv_user"
@@ -34,6 +35,7 @@
 
     <TextView
         android:id="@+id/tv_user_email"
+        android:textAlignment="center"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_below="@+id/tv_user_nome"
@@ -51,6 +53,7 @@
 
     <TextView
         android:id="@+id/tv_user_senha"
+        android:textAlignment="center"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_below="@+id/tv_cadastro_email"
