--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/corBack">
+    >
 
 
     <androidx.cardview.widget.CardView
@@ -23,7 +23,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/corBack">
+            android:background="#4A6572">
 
             <TextView
                 android:id="@+id/item_nome_sala"
