--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_login_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_login_usuario.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:background="#35465C"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content">
 
 
@@ -13,7 +13,7 @@
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/icon_pessoa" />
+        app:srcCompat="@drawable/ic_login" />
 
     <EditText
         android:id="@+id/ed_login_email"
