--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/values/colors.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#35465C</color>
-    <color name="colorPrimaryDark">#35465C</color>
-    <color name="colorAccent">#FF4500</color>
+    <color name="colorPrimary">#232F34</color>
+    <color name="colorPrimaryDark">#232F34</color>
+    <color name="colorAccent">#F9AA33</color>
 
-    <color name="corBack">#35465C</color>
-    <color name="corFront">#FF4500</color>
+    <color name="corBack">#232F34</color>
+    <color name="corFront">#F9AA33</color>
 </resources>
