--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_cadastro_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_cadastro_reserva.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/colorPrimaryDark"
+        app:srcCompat="@color/colorPrimary"
         tools:layout_editor_absoluteX="103dp"
         tools:layout_editor_absoluteY="51dp" />
 
