--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
@@ -20,8 +20,8 @@
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@drawable/icon_add"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/item_divisor2_sala"
+        app:layout_constraintBottom_toBottomOf="@id/item_divisor2_sala"
         tools:ignore="MissingConstraints" />
 
     <ImageView
@@ -30,7 +30,7 @@
         android:layout_height="400dp"
         android:layout_marginTop="48dp"
         app:layout_constraintTop_toTopOf="@id/tx_titulo_sala"
-        app:srcCompat="@color/colorPrimaryDark"
+        app:srcCompat="@color/colorPrimary"
         tools:layout_editor_absoluteX="-29dp" />
 
     <View
@@ -49,9 +49,10 @@
         android:id="@+id/tx_titulo_sala"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Sala Conselho Jedi"
+        android:text="Sala "
         android:textSize="30dp"
         android:textStyle="bold"
+        android:background="@color/colorPrimary"
         android:textColor="@color/colorAccent"
         app:layout_constraintTop_toTopOf="@id/imageView2"
         android:textAlignment="center"
@@ -61,13 +62,14 @@
 
     <TextView
         android:id="@+id/tx_nome_sala"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Nome:"
+        android:text=" Nome:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/tx_titulo_sala"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp"
@@ -77,11 +79,11 @@
 
     <TextView
         android:id="@+id/tx_quantPessoas_sala"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:text="Quantidade de pessoas sentadas:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_margin="8dp"
@@ -93,11 +95,11 @@
 
     <TextView
         android:id="@+id/tx_possuiMidia_sala"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:text="Quantidade de midias da sala:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_margin="8dp"
@@ -108,11 +110,11 @@
     </TextView>
     <TextView
         android:id="@+id/tx_refrigeracao_sala"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Refrigeracao sala:"
+        android:text=" Refrigeracao sala:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_margin="8dp"
@@ -123,12 +125,13 @@
     </TextView>
     <TextView
         android:id="@+id/tx_area_sala"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Area da sala:"
+        android:text=" Area da sala:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
+        android:layout_margin="8dp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/tx_refrigeracao_sala"
         app:layout_constraintVertical_bias="0.0"
@@ -137,12 +140,13 @@
     </TextView>
     <TextView
         android:id="@+id/tx_local_sala"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Localizacao da sala:"
+        android:text=" Localizacao da sala:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
+        android:layout_margin="8dp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/tx_area_sala"
         app:layout_constraintVertical_bias="0.0"
@@ -151,13 +155,14 @@
     </TextView>
     <TextView
         android:id="@+id/tx_latitude_sala"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Latitude da sala:"
+        android:text=" Latitude da sala:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/tx_local_sala"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp"
@@ -165,13 +170,14 @@
     </TextView>
     <TextView
         android:id="@+id/tx_longitude_sala"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Latitude da sala:"
+        android:text=" Lonitude da sala:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/tx_latitude_sala"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp"
@@ -179,13 +185,14 @@
     </TextView>
     <TextView
         android:id="@+id/tx_dataCriacao_sala"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Data de criacao:"
+        android:text=" Data de criacao:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/tx_longitude_sala"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp"
@@ -193,11 +200,12 @@
     </TextView>
     <TextView
         android:id="@+id/tx_dataAlteracao_sala"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Data de alteracao:"
+        android:layout_margin="8dp"
+        android:text= " Data de alteracao:"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/tx_dataCriacao_sala"
