--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/corBack">
+    android:background="@color/colorAccent"
+    android:orientation="vertical">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorAccent">
 
     <ImageView
         android:id="@+id/iv_user"
@@ -20,13 +24,14 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_person"
-        tools:ignore="MissingConstraints" />
+        app:srcCompat="@drawable/ic_action_pessoa"
+        tools:ignore="MissingConstraints"
+        />
 
     <TextView
         android:id="@+id/tv_user_nome"
         android:textAlignment="center"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/iv_user"
         app:layout_constraintTop_toTopOf="@id/iv_user"
@@ -35,14 +40,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="200dp"
         android:ems="10"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv_user_email"
         android:textAlignment="center"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/tv_user_nome"
         app:layout_constraintTop_toTopOf="@id/tv_user_nome"
@@ -51,7 +56,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:ems="10"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         tools:ignore="MissingConstraints">
 
@@ -60,7 +65,7 @@
     <TextView
         android:id="@+id/tv_user_senha"
         android:textAlignment="center"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/tv_cadastro_email"
         app:layout_constraintTop_toTopOf="@id/tv_user_email"
@@ -69,24 +74,28 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:ems="10"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         tools:ignore="MissingConstraints">
 
     </TextView>
 
-    <ImageButton
+
+    <Button
         android:id="@+id/btn_sair_conta"
-        android:layout_width="80dp"
-        android:layout_height="200dp"
-        android:background="@color/corBack"
-        app:layout_constraintTop_toTopOf="@id/tv_user_senha"
-        app:layout_constraintBottom_toBottomOf="@id/tv_user_senha"
-        android:layout_margin="50dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_exit"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:layout_margin="80dp"
+        android:layout_marginTop="116dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="Sair/exit"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@id/tv_user_senha"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp" />
+
+        tools:layout_editor_absoluteX="161dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
