--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="#D0FEFE"
+    android:orientation="vertical">
 
 
     <androidx.cardview.widget.CardView
@@ -13,8 +13,8 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_margin="8dp"
-        app:cardCornerRadius="10dp"
         android:background="@drawable/layout_box_shadow"
+        app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#4A6572">
+            android:background="#700008">
 
             <TextView
                 android:id="@+id/item_nome_sala"
@@ -35,7 +35,21 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintVertical_bias="1.0"
-                tools:text="@sample/salas.json/salas/nome"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/item_local_sala"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_below="@id/item_nome_sala"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+                android:textColor="@color/corFront"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/item_divisor_salas"
+                app:layout_constraintBottom_toTopOf="@id/item_divisor_salas"
+                app:layout_constraintVertical_bias="1.0"
                 tools:ignore="MissingConstraints" />
 
             <View
