--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
@@ -16,26 +16,51 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="150dp"
-        android:layout_marginEnd="150dp"
         android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_user_nome"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_action_pessoa"
-        tools:ignore="MissingConstraints"
-        />
+        tools:ignore="MissingConstraints" />
+
+    <View
+        android:id="@+id/item_divisor"
+        android:layout_width="300dp"
+        android:layout_height="3dp"
+        android:layout_below="@id/iv_user"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_user">
+
+    </View>
+
+    <TextView
+        android:id="@+id/tv_DADOS"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/item_divisor"
+        app:layout_constraintTop_toTopOf="@id/item_divisor"
+        android:text="DADOS DO USUARIO"
+        android:padding="8dp"
+        android:layout_centerHorizontal="true"
+
+        android:textSize="20sp"
+        android:ems="10"
+        android:textColor="@color/colorPrimary"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv_user_nome"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/iv_user"
         app:layout_constraintTop_toTopOf="@id/iv_user"
-        android:text="Seu Nome"
+        android:text="Nome: "
         android:padding="8dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="200dp"
@@ -46,15 +71,15 @@
 
     <TextView
         android:id="@+id/tv_user_email"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/tv_user_nome"
         app:layout_constraintTop_toTopOf="@id/tv_user_nome"
-        android:text="Seu Email"
+        android:text="Email"
         android:padding="8dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:textColor="@color/colorPrimary"
         android:textSize="16sp"
@@ -62,21 +87,56 @@
 
     </TextView>
 
+
+    <View
+        android:id="@+id/item_divisor_DADOS_USER"
+        android:layout_width="300dp"
+        android:layout_height="3dp"
+        android:layout_below="@id/tv_user_email"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/tv_user_email"
+        app:layout_constraintTop_toBottomOf="@+id/tv_user_email">
+
+    </View>
+
+
     <TextView
-        android:id="@+id/tv_user_senha"
-        android:textAlignment="center"
+        android:id="@+id/tv_empresa"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/tv_cadastro_email"
-        app:layout_constraintTop_toTopOf="@id/tv_user_email"
-        android:text="Sua Senha"
-        android:padding="8dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="112dp"
         android:ems="10"
+        android:padding="8dp"
+        android:text="EMPRESA"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="@id/tv_user_email"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/tv_user_organizacao"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/tv_empresa"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:padding="8dp"
+        android:text="Organizacao"
+        android:textAlignment="textStart"
         android:textColor="@color/colorPrimary"
         android:textSize="16sp"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="@id/tv_empresa"
+        android:layout_marginTop="50dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp">
 
     </TextView>
 
@@ -86,15 +146,20 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_margin="80dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="201dp"
+
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:text="Sair/exit"
         android:textColor="@color/colorAccent"
-        app:layout_constraintTop_toBottomOf="@id/tv_user_senha"
-        tools:ignore="MissingConstraints"
 
-        tools:layout_editor_absoluteX="161dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_user_organizacao"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
