--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_lista_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_lista_reserva.xml
@@ -8,5 +8,20 @@
     >
 
 
-
+    <TextView
+        android:id="@+id/textReservas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="177dp"
+        android:layout_marginTop="244dp"
+        android:layout_marginEnd="175dp"
+        android:textAlignment="center"
+        android:layout_marginBottom="468dp"
+        android:textSize="20sp"
+        android:text="Voce ainda nao fez nenhuma reserva, bro"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
