--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_main.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#A5000E"
+        android:background="@color/colorPrimaryDark"
         android:minHeight="?attr/actionBarSize" />
 
 
@@ -23,7 +23,7 @@
         android:id="@+id/tab_layout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        app:tabTextColor="@color/corFront"
+        app:tabTextColor="@color/colorAccent"
         android:background="@color/colorPrimary"
         />
 
@@ -32,7 +32,7 @@
     <androidx.viewpager.widget.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/viewpager"
-        android:background="@color/corBack"
+        android:background="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
