--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
@@ -5,225 +5,238 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorAccent"
     tools:context=".activitysnormal.ReservaSalaActivity"
     android:orientation="vertical">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/corBack">
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_reserva"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        android:src="@drawable/icon_add"
-        app:layout_constraintEnd_toEndOf="@id/item_divisor2_sala"
-        app:layout_constraintBottom_toBottomOf="@id/item_divisor2_sala"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toTopOf="@id/tx_titulo_sala"
-        app:srcCompat="@color/colorPrimary"
-        tools:layout_editor_absoluteX="-29dp" />
-
-    <View
-        android:id="@+id/item_divisor_sala"
-        android:layout_width="0dp"
-        android:layout_height="3dp"
-        android:layout_below="@id/tx_titulo_sala"
-        android:background="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tx_titulo_sala">
-
-    </View>
-
-    <TextView
-        android:id="@+id/tx_titulo_sala"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Sala "
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintTop_toTopOf="@id/imageView2"
-        android:textAlignment="center"
-        >
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/tx_nome_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text=" Nome:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tx_titulo_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
 
 
-    <TextView
-        android:id="@+id/tx_quantPessoas_sala"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="Quantidade de pessoas sentadas:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tx_nome_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorAccent">
 
-    <TextView
-        android:id="@+id/tx_possuiMidia_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="Quantidade de midias da sala:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tx_quantPessoas_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <TextView
-        android:id="@+id/tx_refrigeracao_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text=" Refrigeracao sala:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tx_possuiMidia_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <TextView
-        android:id="@+id/tx_area_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text=" Area da sala:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:layout_margin="8dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/tx_refrigeracao_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <TextView
-        android:id="@+id/tx_local_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text=" Localizacao da sala:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:layout_margin="8dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/tx_area_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <TextView
-        android:id="@+id/tx_latitude_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text=" Latitude da sala:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tx_local_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <TextView
-        android:id="@+id/tx_longitude_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text=" Lonitude da sala:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tx_latitude_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <TextView
-        android:id="@+id/tx_dataCriacao_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text=" Data de criacao:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tx_longitude_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <TextView
-        android:id="@+id/tx_dataAlteracao_sala"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="8dp"
-        android:text= " Data de alteracao:"
-        android:textAlignment="textStart"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/tx_dataCriacao_sala"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
-    </TextView>
-    <View
+      <androidx.appcompat.widget.Toolbar
+          android:id="@+id/toolbar2"
+          android:layout_width="match_parent"
+          android:layout_height="100dp"
+          android:background="?attr/colorPrimary"
+          android:minHeight="?attr/actionBarSize"
+          android:theme="?attr/actionBarTheme"
+          app:layout_constraintTop_toTopOf="parent"
+          tools:ignore="MissingConstraints" />
+
+      <TextView
+          android:id="@+id/tx_caracteristicas_sala"
+          android:layout_width="250dp"
+          android:layout_height="50dp"
+          android:layout_marginTop="3dp"
+          android:text=" Caracteristicas da Sala "
+          android:textAlignment="textStart"
+          android:textColor="@color/corBack"
+          android:textSize="23dp"
+          android:textStyle="bold"
+          app:layout_constraintTop_toTopOf="@id/toolbar2"
+          tools:ignore="MissingConstraints">
+
+      </TextView>
+
+      <ImageButton
+          android:id="@+id/btn_infor"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="20dp"
+          android:background="@null"
+          android:foregroundGravity="left"
+          app:layout_constraintBottom_toBottomOf="@id/tx_caracteristicas_sala"
+          app:srcCompat="@drawable/icon_btn_baixo"
+          tools:ignore="MissingConstraints"
+          tools:layout_editor_absoluteX="291dp" />
+
+      <TextView
+            android:id="@+id/tx_nome_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Nome:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints,NotSibling"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+
+        <TextView
+            android:id="@+id/tx_quantPessoas_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Quantidade de pessoas sentadas:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_nome_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_possuiMidia_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Quantidade de midias da sala:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_quantPessoas_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_refrigeracao_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Refrigeracao sala:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_possuiMidia_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_area_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Area da sala:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_refrigeracao_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_local_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Localizacao da sala:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_area_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_latitude_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Latitude da sala:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_local_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_longitude_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Lonitude da sala:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_latitude_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_dataCriacao_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Data de criacao:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_longitude_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+        <TextView
+            android:id="@+id/tx_dataAlteracao_sala"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:text=" Data de alteracao:"
+            android:textAlignment="textStart"
+            android:textColor="@color/corBack"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            app:layout_constraintTop_toBottomOf="@id/tx_dataCriacao_sala"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+      <View
         android:id="@+id/item_divisor2_sala"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_below="@id/fab_reserva"
-        android:background="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="@id/imageView2"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView2">
+        app:layout_constraintTop_toBottomOf="@id/toolbar2">
 
     </View>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+      <com.google.android.material.floatingactionbutton.FloatingActionButton
+          android:id="@+id/fab_reserva"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_margin="16dp"
+          android:backgroundTint="@color/colorPrimary"
+          android:clickable="true"
+          android:src="@drawable/icon_add"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          tools:ignore="MissingConstraints" />
+
+      <ListView
+          android:id="@+id/listaDeReservas"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          app:layout_constraintStart_toStartOf="@id/tx_dataAlteracao_sala"
+          app:layout_constraintEnd_toEndOf="@id/tx_dataAlteracao_sala"
+          app:layout_constraintBottom_toBottomOf="@id/tx_dataAlteracao_sala">
+
+      </ListView>
+
+
+    </LinearLayout>
 </ScrollView>
