--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
@@ -13,10 +13,10 @@
 
     <ImageView
         android:id="@+id/iv_user"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="90dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="90dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_user_nome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
 
         android:textSize="20sp"
         android:ems="10"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -65,7 +65,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="200dp"
         android:ems="10"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         android:textSize="16sp"
         tools:ignore="MissingConstraints" />
 
@@ -81,7 +81,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         android:textSize="16sp"
         tools:ignore="MissingConstraints">
 
@@ -113,7 +113,7 @@
         android:padding="8dp"
         android:text="EMPRESA"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="@id/tv_user_email"
         tools:ignore="MissingConstraints"
@@ -131,7 +131,7 @@
         android:padding="8dp"
         android:text="Organizacao"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintTop_toTopOf="@id/tv_empresa"
         android:layout_marginTop="50dp"
