--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D0FEFE"
+    android:background="@color/colorAccent"
     android:orientation="vertical">
 
 
@@ -23,7 +23,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#700008">
+            android:background="@color/colorAccent">
 
             <TextView
                 android:id="@+id/item_nome_sala"
@@ -31,159 +31,32 @@
                 android:layout_height="0dp"
                 android:layout_margin="8dp"
                 android:padding="8dp"
-                android:textColor="@color/corFront"
+                android:textColor="#000000"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintVertical_bias="1.0"
                 tools:ignore="MissingConstraints"
-                app:layout_constraintBottom_toBottomOf="@+id/item_nome_sala"
-                app:layout_constraintBottom_toTopOf="@id/item_nome_sala"/>
+               />
+
+
 
             <TextView
                 android:id="@+id/item_local_sala"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_below="@id/item_nome_sala"
-                android:layout_margin="8dp"
                 android:padding="8dp"
-                android:textColor="@color/corFront"
+                android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/item_quantPessoas_sala"
-                app:layout_constraintBottom_toTopOf="@id/item_quantPessoas_sala"
-                app:layout_constraintVertical_bias="1.0"
-                tools:ignore="MissingConstraints" />
+                android:layout_margin="8dp"
+                app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="0dp" />
 
 
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/expandableView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="12dp"
-                android:visibility="gone"
-                android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@+id/item_local_sala"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
 
-                <TextView
-                    android:id="@+id/item_quantPessoas_sala"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_below="@id/item_local_sala"
-                    android:layout_margin="8dp"
-                    android:padding="8dp"
-                    android:textColor="@color/corFront"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    android:text=";lcmvsdmlksvkmdv"
-                    app:layout_constraintBottom_toBottomOf="@+id/item_dataCriacao_sala"
-                    app:layout_constraintBottom_toTopOf="@id/item_dataCriacao_sala"
-                    app:layout_constraintVertical_bias="1.0"
-                    tools:ignore="MissingConstraints" />
-
-                <TextView
-                    android:id="@+id/item_dataCriacao_sala"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_below="@id/item_quantPessoas_sala"
-                    android:layout_margin="8dp"
-                    android:padding="8dp"
-                    android:textColor="@color/corFront"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    android:text="lkdfmlksdmnflknsd;lf"
-                    app:layout_constraintBottom_toBottomOf="@+id/item_dataAlteracao_sala"
-                    app:layout_constraintBottom_toTopOf="@id/item_dataAlteracao_sala"
-                    app:layout_constraintVertical_bias="1.0"
-                    tools:ignore="MissingConstraints" />
-
-                <TextView
-                    android:id="@+id/item_dataAlteracao_sala"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_below="@id/item_dataCriacao_sala"
-                    android:layout_margin="8dp"
-                    android:padding="8dp"
-                    android:textColor="@color/corFront"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    android:text="lkdfmlksdmnflknsd;lf"
-                    app:layout_constraintBottom_toBottomOf="@+id/item_midia_sala"
-                    app:layout_constraintBottom_toTopOf="@id/item_midia_sala"
-                    app:layout_constraintVertical_bias="1.0"
-                    tools:ignore="MissingConstraints" />
-                <TextView
-                    android:id="@+id/item_midia_sala"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_below="@id/item_dataAlteracao_sala"
-                    android:layout_margin="8dp"
-                    android:padding="8dp"
-                    android:textColor="@color/corFront"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    android:text="lkdfmlksdmnflknsd;lfdfcsdf"
-                    app:layout_constraintBottom_toBottomOf="@+id/item_area_sala"
-                    app:layout_constraintBottom_toTopOf="@id/item_area_sala"
-                    app:layout_constraintVertical_bias="1.0"
-                    tools:ignore="MissingConstraints" />
-                <TextView
-                    android:id="@+id/item_area_sala"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_below="@id/item_refrigeracao"
-                    android:layout_margin="8dp"
-                    android:padding="8dp"
-                    android:textColor="@color/corFront"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    android:text="lkdfmlksdmnflknsd;lfdfcsdf"
-                    app:layout_constraintBottom_toBottomOf="@+id/item_refrigeracao"
-                    app:layout_constraintBottom_toTopOf="@id/item_refrigeracao"
-                    app:layout_constraintVertical_bias="1.0"
-                    tools:ignore="MissingConstraints" />
-
-                <TextView
-                    android:id="@+id/item_refrigeracao"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_below="@id/item_quantPessoas_sala"
-                    android:layout_margin="8dp"
-                    android:padding="8dp"
-                    android:textColor="@color/corFront"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    android:text="refri"
-                    app:layout_constraintBottom_toBottomOf="@+id/item_divisor_salas"
-                    app:layout_constraintBottom_toTopOf="@id/item_divisor_salas"
-                    app:layout_constraintVertical_bias="1.0"
-                    tools:ignore="MissingConstraints" />
-
-
-                <View
-                    android:id="@+id/item_divisor_salas"
-                    android:layout_width="0dp"
-                    android:layout_height="3dp"
-                    android:layout_below="@id/item_refrigeracao"
-                    android:layout_marginTop="55dp"
-                    android:background="@color/colorAccent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/item_refrigeracao">
-
-                </View>
-                <Button
-                    android:id="@+id/btn_infor"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ic_btn_baixo"
-                    app:layout_constraintBottom_toTopOf="@+id/item_quantPessoas_sala"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/item_quantPessoas_sala">
-                </Button>
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
