--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/values/colors.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200ee</color>
-    <color name="colorPrimaryDark">#3700b3</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorPrimary">#1a237e</color>
+    <color name="colorPrimaryDark">#000051</color>
+    <color name="colorAccent">#5E6200EE</color>
 
     <color name="corBack">#000000</color>
-    <color name="corFront">#fedbd0</color>
+    <color name="corBranco">#ffffff</color>
 </resources>
