--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/corBranco"
     tools:context=".activitysnormal.ReservaSalaActivity"
     android:orientation="vertical">
 
@@ -14,60 +14,100 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/colorAccent">
+        android:background="@color/corBranco">
 
-      <androidx.appcompat.widget.Toolbar
-          android:id="@+id/toolbar2"
-          android:layout_width="match_parent"
-          android:layout_height="100dp"
-          android:background="?attr/colorPrimary"
-          android:minHeight="?attr/actionBarSize"
-          android:theme="?attr/actionBarTheme"
-          app:layout_constraintTop_toTopOf="parent"
-          tools:ignore="MissingConstraints" />
+         <androidx.constraintlayout.widget.ConstraintLayout
+             android:layout_width="match_parent"
+             android:layout_height="400dp">
 
-      <TextView
-          android:id="@+id/tx_caracteristicas_sala"
-          android:layout_width="250dp"
-          android:layout_height="50dp"
-          android:layout_marginTop="3dp"
-          android:text=" Caracteristicas da Sala "
-          android:textAlignment="textStart"
-          android:textColor="@color/corBack"
-          android:textSize="23dp"
-          android:textStyle="bold"
-          app:layout_constraintTop_toTopOf="@id/toolbar2"
-          tools:ignore="MissingConstraints">
+             <androidx.appcompat.widget.Toolbar
+              android:id="@+id/toolbar2"
+              android:layout_width="match_parent"
+              android:layout_height="100dp"
+              android:background="?attr/colorPrimary"
+              android:minHeight="?attr/actionBarSize"
+              android:theme="?attr/actionBarTheme"
+              app:layout_constraintTop_toTopOf="parent"
+              tools:ignore="MissingConstraints" />
+             <TextView
+              android:id="@+id/tx_nome_sala"
+              android:layout_width="match_parent"
+              android:layout_height="30dp"
+              android:layout_margin="8dp"
+              android:text="Nome:"
+              android:textAlignment="center"
+              android:textColor="#ffffff"
+         android:textSize="25dp"
+      android:textStyle="normal"
+      app:layout_constraintTop_toTopOf="@id/toolbar2"
+      app:layout_constraintVertical_bias="0.0"
+      tools:ignore="MissingConstraints,NotSibling"
+      tools:layout_editor_absoluteX="0dp">
+  </TextView>
 
-      </TextView>
+        <ImageButton
+            android:id="@+id/btn_infor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="72dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@null"
+            android:foregroundGravity="left"
+            app:layout_constraintBottom_toBottomOf="@id/tx_caracteristicas_sala"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.74"
+            app:layout_constraintStart_toStartOf="@+id/tx_caracteristicas_sala"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
+            app:layout_constraintVertical_bias="0.75"
+            app:srcCompat="@drawable/icon_btn_baixo"
+            tools:ignore="MissingConstraints" />
 
-      <ImageButton
-          android:id="@+id/btn_infor"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="20dp"
-          android:background="@null"
-          android:foregroundGravity="left"
-          app:layout_constraintBottom_toBottomOf="@id/tx_caracteristicas_sala"
-          app:srcCompat="@drawable/icon_btn_baixo"
-          tools:ignore="MissingConstraints"
-          tools:layout_editor_absoluteX="291dp" />
 
-      <TextView
-            android:id="@+id/tx_nome_sala"
+             <TextView
+                 android:id="@+id/tx_caracteristicas_sala"
+                 android:layout_width="250dp"
+                 android:layout_height="50dp"
+                 android:layout_margin="60dp"
+                 android:layout_marginTop="60dp"
+                 android:text=" Caracteristicas da Sala "
+                 android:textAlignment="center"
+                 android:textColor="@color/corBack"
+                 android:textSize="23dp"
+                 android:textStyle="bold"
+                 app:layout_constraintTop_toBottomOf="@id/tx_nome_sala"
+                 tools:ignore="MissingConstraints"
+                 tools:layout_editor_absoluteX="0dp"></TextView>
+
+             <androidx.cardview.widget.CardView
+    android:id="@+id/card_reserva"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+
+    app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
+    >
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutExpand"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+      >
+
+        <View
+            android:id="@+id/item_divisor2_sala"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_margin="8dp"
-            android:text=" Nome:"
-            android:textAlignment="textStart"
-            android:textColor="@color/corBack"
-            android:textSize="20dp"
-            android:textStyle="normal"
-            app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
-            app:layout_constraintVertical_bias="0.0"
-            tools:ignore="MissingConstraints,NotSibling"
-            tools:layout_editor_absoluteX="0dp"></TextView>
+            android:layout_height="3dp"
+            android:layout_below="@id/layoutExpand"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card_reserva"
+            tools:ignore="NotSibling">
 
+        </View>
 
         <TextView
             android:id="@+id/tx_quantPessoas_sala"
@@ -79,7 +119,6 @@
             android:textColor="@color/corBack"
             android:textSize="20dp"
             android:textStyle="normal"
-            app:layout_constraintTop_toBottomOf="@id/tx_nome_sala"
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="0dp"></TextView>
@@ -203,31 +242,23 @@
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="0dp"></TextView>
-      <View
-        android:id="@+id/item_divisor2_sala"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_below="@id/fab_reserva"
-        android:background="@color/colorPrimaryDark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar2">
-
-    </View>
 
 
-      <com.google.android.material.floatingactionbutton.FloatingActionButton
-          android:id="@+id/fab_reserva"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_margin="16dp"
-          android:backgroundTint="@color/colorPrimary"
-          android:clickable="true"
-          android:src="@drawable/icon_add"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          tools:ignore="MissingConstraints" />
 
-      <ListView
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</androidx.cardview.widget.CardView>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+     <!-- <ListView
           android:id="@+id/listaDeReservas"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
@@ -235,7 +266,20 @@
           app:layout_constraintEnd_toEndOf="@id/tx_dataAlteracao_sala"
           app:layout_constraintBottom_toBottomOf="@id/tx_dataAlteracao_sala">
 
-      </ListView>
+      </ListView>-->
+
+      <com.google.android.material.floatingactionbutton.FloatingActionButton
+          android:id="@+id/fab_reserva"
+          android:layout_width="382dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="16dp"
+          android:backgroundTint="@color/colorPrimary"
+          android:clickable="true"
+          android:src="@drawable/icon_add"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          android:layout_gravity="end"
+          tools:ignore="MissingConstraints" />
 
 
     </LinearLayout>
