--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_conta_usuario.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/corBranco"
     android:orientation="vertical">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/corBranco">
 
     <ImageView
         android:id="@+id/iv_user"
@@ -153,7 +153,7 @@
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:text="Sair/exit"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/corBranco"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
