--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
@@ -36,6 +36,7 @@
                 android:textStyle="bold"
                 app:layout_constraintVertical_bias="1.0"
                 tools:ignore="MissingConstraints"
+                android:text="teste"
                />
 
 
@@ -52,10 +53,196 @@
                 android:layout_margin="8dp"
                 app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
                 tools:ignore="MissingConstraints"
+                android:text="teste"
                 tools:layout_editor_absoluteX="0dp" />
 
+            <ImageButton
+                android:id="@+id/btn_infor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="72dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@null"
+                android:foregroundGravity="left"
+                app:layout_constraintBottom_toBottomOf="@id/tx_caracteristicas_sala"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.74"
+                app:layout_constraintStart_toStartOf="@+id/tx_caracteristicas_sala"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar2"
+                app:layout_constraintVertical_bias="0.75"
+                app:srcCompat="@drawable/icon_btn_baixo"
+                tools:ignore="MissingConstraints" />
 
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_reserva"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/item_local_sala">
+
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layoutExpand"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+
+                    <View
+                        android:id="@+id/item_divisor2_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="3dp"
+                        android:layout_below="@id/layoutExpand"
+                        android:background="@color/colorPrimaryDark"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/card_reserva"
+                        tools:ignore="NotSibling">
+
+                    </View>
+
+                    <TextView
+                        android:id="@+id/tx_quantPessoas_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Quantidade de pessoas sentadas:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_possuiMidia_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Quantidade de midias da sala:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_quantPessoas_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_refrigeracao_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Refrigeracao sala:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_possuiMidia_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_area_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Area da sala:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_refrigeracao_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_local_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Localizacao da sala:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_area_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_latitude_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Latitude da sala:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_local_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_longitude_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Lonitude da sala:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_latitude_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_dataCriacao_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Data de criacao:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_longitude_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tx_dataAlteracao_sala"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:text=" Data de alteracao:"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/corBack"
+                        android:textSize="20dp"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@id/tx_dataCriacao_sala"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"></TextView>
+
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
 
 
 
