--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_cadastro_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_cadastro_usuario.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@color/corBranco">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         android:layout_width="110dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/ic_cadastro"/>
+        app:srcCompat="@drawable/icon_wise"/>
 
     <EditText
         android:id="@+id/ed_cadastro_nome"
@@ -25,9 +25,14 @@
         android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:drawableLeft="@drawable/ic_person"
-        android:textColorHint="@color/corBranco"
-        android:textColor="#ffffff" />
+        android:drawableLeft="@drawable/ic_action_pessoa"
+        android:textColorHint="@color/corBack"
+        android:textColor="@color/corBack">
+
+        <requestFocus>
+
+        </requestFocus>
+    </EditText>
 
     <TextView
         android:id="@+id/tv_cadastro_nome"
@@ -38,7 +43,7 @@
         android:layout_alignLeft="@+id/ed_cadastro_nome"
         android:layout_marginTop="20dp"
         android:text="Nome"
-        android:textColor="#ffffff"
+        android:textColor="@color/corBack"
         android:textSize="16sp" />
 
 
@@ -51,12 +56,9 @@
         android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:drawableLeft="@drawable/ic_email"
-        android:textColorHint="@color/corBranco"
-        android:textColor="#ffffff">
-        <requestFocus>
-
-        </requestFocus>
+        android:drawableLeft="@drawable/icon_email"
+        android:textColorHint="@color/corBack"
+        android:textColor="@color/corBack">
     </EditText>
 
 
@@ -69,7 +71,7 @@
         android:layout_alignLeft="@+id/ed_cadastro_nome"
         android:layout_marginTop="20dp"
         android:text="Email"
-        android:textColor="#ffffff"
+        android:textColor="@color/corBack"
         android:textSize="16sp" />
 
     <EditText
@@ -81,9 +83,9 @@
         android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:drawableLeft="@drawable/icon_senha"
-        android:textColorHint="@color/corBranco"
-        android:textColor="#ffffff" >
+        android:drawableLeft="@drawable/icon_senhaa"
+        android:textColorHint="@color/corBack"
+        android:textColor="@color/corBack" >
 
     </EditText>
 
@@ -96,7 +98,7 @@
         android:layout_alignLeft="@+id/ed_cadastro_email"
         android:layout_marginTop="20dp"
         android:text="Senha"
-        android:textColor="#ffffff"
+        android:textColor="@color/corBack"
         android:textSize="16sp" />
 
     <Spinner
