--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_login_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_login_usuario.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:padding="8dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/icon_pessoa" />
+        app:srcCompat="@drawable/icon_wise" />
 
     <EditText
         android:id="@+id/ed_login_email"
@@ -50,7 +50,7 @@
         android:id="@+id/btn_login"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColor="@color/corBranco"
         android:textSize="20sp"
         android:background="@drawable/botao_radius"
         android:layout_below="@+id/ed_login_senha"
