--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_cadastro_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_cadastro_reserva.xml
@@ -23,7 +23,7 @@
         android:layout_margin="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Salas de reunios Wise"
+        android:text="Reserva de sala"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
