--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
@@ -10,6 +10,12 @@
     android:orientation="vertical">
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/corBranco">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +24,7 @@
 
          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
-             android:layout_height="400dp">
+             android:layout_height="wrap_content">
 
              <androidx.appcompat.widget.Toolbar
               android:id="@+id/toolbar2"
@@ -29,7 +35,7 @@
               android:theme="?attr/actionBarTheme"
               app:layout_constraintTop_toTopOf="parent"
               tools:ignore="MissingConstraints" />
-             <TextView
+            <TextView
               android:id="@+id/tx_nome_sala"
               android:layout_width="match_parent"
               android:layout_height="30dp"
@@ -37,51 +43,73 @@
               android:text="Nome:"
               android:textAlignment="center"
               android:textColor="#ffffff"
-         android:textSize="25dp"
-      android:textStyle="normal"
-      app:layout_constraintTop_toTopOf="@id/toolbar2"
-      app:layout_constraintVertical_bias="0.0"
-      tools:ignore="MissingConstraints,NotSibling"
-      tools:layout_editor_absoluteX="0dp">
-  </TextView>
+              android:textSize="25dp"
+              android:textStyle="normal"
+              app:layout_constraintTop_toTopOf="@id/toolbar2"
+              app:layout_constraintVertical_bias="0.0"
+              tools:ignore="MissingConstraints,NotSibling"
+              tools:layout_editor_absoluteX="0dp">
+            </TextView>
 
-        <ImageButton
-            android:id="@+id/btn_infor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@null"
-            android:foregroundGravity="left"
-            app:layout_constraintBottom_toBottomOf="@id/tx_caracteristicas_sala"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.74"
-            app:layout_constraintStart_toStartOf="@+id/tx_caracteristicas_sala"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-            app:layout_constraintVertical_bias="0.75"
-            app:srcCompat="@drawable/icon_btn_baixo"
-            tools:ignore="MissingConstraints" />
+             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                 android:id="@+id/fab_reserva"
+                 android:layout_width="382dp"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="top"
+                 android:layout_margin="16dp"
+                 android:backgroundTint="@color/colorPrimary"
+                 android:clickable="true"
+                 android:src="@drawable/icon_add"
+                 app:layout_constraintBottom_toBottomOf="@id/imageView2"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintTop_toTopOf="@id/imageView2"
+                 app:layout_constraintVertical_bias="0.74"
+                 tools:ignore="MissingConstraints" />
+
+             <ImageView
+                 android:id="@+id/imageView2"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 app:srcCompat="@drawable/sala"
+                 tools:ignore="MissingConstraints" />
+
+             <ImageButton
+                 android:id="@+id/btn_infor"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="70dp"
+                 android:layout_marginEnd="1dp"
+                 android:layout_marginBottom="20dp"
+                 android:background="@null"
+                 android:foregroundGravity="left"
+                 app:layout_constraintBottom_toBottomOf="@id/tx_caracteristicas_sala"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="0.76"
+                 app:layout_constraintStart_toStartOf="@+id/tx_caracteristicas_sala"
+
+                 app:srcCompat="@drawable/icon_btn_baixo"
+                 tools:ignore="MissingConstraints" />
 
 
              <TextView
                  android:id="@+id/tx_caracteristicas_sala"
                  android:layout_width="250dp"
                  android:layout_height="50dp"
-                 android:layout_margin="60dp"
-                 android:layout_marginTop="60dp"
+                 android:layout_margin="8dp"
+                 android:layout_marginStart="80dp"
+                 android:layout_marginEnd="100dp"
                  android:text=" Caracteristicas da Sala "
                  android:textAlignment="center"
                  android:textColor="@color/corBack"
                  android:textSize="23dp"
                  android:textStyle="bold"
-                 app:layout_constraintTop_toBottomOf="@id/tx_nome_sala"
-                 tools:ignore="MissingConstraints"
-                 tools:layout_editor_absoluteX="0dp"></TextView>
+                 app:layout_constraintBottom_toBottomOf="@id/imageView2"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="0.25"
+                 app:layout_constraintStart_toStartOf="parent"
+                 tools:ignore="MissingConstraints"></TextView>
 
-
-     <androidx.cardview.widget.CardView
+   <androidx.cardview.widget.CardView
         android:id="@+id/card_reserva"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,7 +117,7 @@
 
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutExpand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -256,35 +284,18 @@
 
 
 
-     <!-- <ListView
-          android:id="@+id/listaDeReservas"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          app:layout_constraintStart_toStartOf="@id/tx_dataAlteracao_sala"
-          app:layout_constraintEnd_toEndOf="@id/tx_dataAlteracao_sala"
-          app:layout_constraintBottom_toBottomOf="@id/tx_dataAlteracao_sala">
-
-      </ListView>-->
-
-      <com.google.android.material.floatingactionbutton.FloatingActionButton
-          android:id="@+id/fab_reserva"
-          android:layout_width="382dp"
-          android:layout_height="wrap_content"
-          android:layout_margin="16dp"
-          android:backgroundTint="@color/colorPrimary"
-          android:clickable="true"
-          android:src="@drawable/icon_add"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          android:layout_gravity="end"
-          tools:ignore="MissingConstraints" />
-
         <ListView
             android:id="@+id/listViewReservas"
             tools:listitem="@layout/item_lista_reservas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="match_parent">
         </ListView>
+
     </LinearLayout>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </ScrollView>
