--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_lista_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_lista_reserva.xml
@@ -24,4 +24,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/listViewReservas"
+        tools:listitem="@layout/item_lista_reservas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
