--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_cadastro_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_cadastro_reserva.xml
@@ -12,57 +12,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </TextView>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="100dp"
-                android:src="@drawable/ic_action_pessoa">
-
-            </ImageView>
-
-            <EditText
-                android:id="@+id/ed_nome_organizador"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_margin="30dp"
-                android:layout_marginEnd="30dp"
-                android:textColor="@color/corBack"
-                android:hint=" Organizador"
-                android:textColorHint="@android:color/black">
-                <requestFocus>
-
-                </requestFocus>
-            </EditText>
-
-        </LinearLayout>
-
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/text_print_data"
-                android:layout_width="match_parent"
-                android:text="Data da reuniao"
-                android:textAlignment="center"
-                android:layout_height="40dp">
-
-            </TextView>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,47 +30,87 @@
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+
+
+            <ImageButton
+                android:id="@+id/btn_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/corBranco"
+                android:layout_marginStart="20dp"
+                app:srcCompat="@drawable/icon_calendario" />
+
+            <TextView
+                android:id="@+id/text_print_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:text="Data da reuniao"
+                android:textAlignment="textEnd"
+                android:textColor="@color/corBack">
+
+            </TextView>
+        </LinearLayout>
+
+
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="60dp">
 
+
+            <ImageButton
+                android:id="@+id/btn_horai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/corBranco"
+                android:layout_marginStart="20dp"
+                app:srcCompat="@drawable/icon_horai" />
 
             <TextView
                 android:id="@+id/text_horaioInicial"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_margin="20dp"
-                android:layout_marginEnd="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textColor="@color/corBack"
                 android:textAlignment="center"
+                android:layout_marginHorizontal="10dp"
                 android:hint="Horario Inicial"
                 android:textColorHint="@android:color/black">
 
             </TextView>
 
-            <TextView
-                android:id="@+id/text_horaioFinal"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_margin="20dp"
-                android:layout_marginEnd="30dp"
-                android:textAlignment="center"
-                android:textColor="@color/corBack"
-                android:textColorHint="@android:color/black"
-                android:hint="Horario final">
 
-            </TextView>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="60dp">
 
+            <ImageButton
+                android:id="@+id/btn_horaf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/corBranco"
+                android:layout_marginStart="20dp"
+                app:srcCompat="@drawable/icon_horai" />
 
+            <TextView
+                android:id="@+id/text_horaioFinal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/corBack"
+                android:layout_marginHorizontal="10dp"
+                android:textColorHint="@android:color/black"
+                android:hint="Horario final">
 
+            </TextView>
 
 
         </LinearLayout>
