--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -7,17 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/corBranco">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_item_lista_salas"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="@drawable/layout_box_shadow"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="NotSibling">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,75 +16,68 @@
             <TextView
                 android:id="@+id/item_nome_sala"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:layout_marginTop="10dp"
                 android:padding="8dp"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:text="Nome locador"
+                android:text="Nome Sala"
                 android:textStyle="bold"
-                android:layout_marginBottom="30dp"
+                app:layout_constraintBottom_toTopOf=""
                 app:layout_constraintVertical_bias="1.0"
                 tools:ignore="MissingConstraints"
                 />
-
-            <LinearLayout
-                android:id="@+id/layout_datahora"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                android:layout_marginTop="30dp"
-                tools:layout_editor_absoluteY="43dp">
 
 
                 <TextView
                     android:id="@+id/item_datahora_inicial"
                     android:layout_width="150dp"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:hint="Horario Inicial"
-                    android:textAlignment="center"
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
                     android:textColor="@color/corBack"
-                    android:textColorHint="@android:color/black">
+                    app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
+                    android:textColorHint="@android:color/black"
+                    tools:ignore="MissingConstraints">
 
                 </TextView>
 
                 <TextView
                     android:id="@+id/item_datahora_final"
                     android:layout_width="150dp"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:hint="Horario final"
-                    android:textAlignment="center"
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
                     android:textColor="@color/corBack"
-                    android:textColorHint="@android:color/black">
+                    app:layout_constraintTop_toBottomOf="@id/item_datahora_inicial"
+                    android:textColorHint="@android:color/black"
+                    tools:ignore="MissingConstraints">
 
                 </TextView>
 
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/item_descricao_reserva"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_below="@id/item_nome_sala"
-                android:padding="8dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/item_datahora_final"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:text="reuniao sobre os trainees de pa"
                 android:textStyle="normal"
-                android:layout_margin="8dp"
-                app:layout_constraintTop_toBottomOf="@id/layout_datahora"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="0dp" />
+                android:padding="5dp"
+                app:layout_constraintTop_toBottomOf="@id/item_datahora_final"
+                tools:ignore="MissingConstraints" />
 
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
